Create a container and HTML base of a header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Landing Page</title>
   </head>
   <body>
-    
+    <div class="container">
+        <header class="header">
+            <a href="#">Header Logo</a>
+            <ul class="navigation">
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </header>
+    </div>
   </body>
 </html>
