Add background to the page and style container

--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     <title>Landing Page</title>
   </head>
   <body>
-    <div class="container">
-        <header class="header">
-            <a href="#">Header Logo</a>
-            <ul class="navigation">
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
-            </ul>
-        </header>
+    <div class="top-page-background">
+        <div class="container">
+            <header class="header">
+                <a href="#" class="header-logo">Header Logo</a>
+                <ul class="navigation">
+                    <li>header link one</li>
+                    <li>header link two</li>
+                    <li>header link three</li>
+                </ul>
+            </header>
+        </div>
     </div>
   </body>
 </html>
