--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
                     <li>header link three</li>
                 </ul>
             </header>
+            <div class="main-top-page">
+                <div class="left-side">
+                    <h1 class="title">This website is awesome</h1>
+                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                    <button>Sign up</button>
+                </div>
+                <div class="right-side">
+                    <div class="image-placeholder">this is a placeholder for an image</div>
+                </div>
+            </div>
         </div>
     </div>
   </body>
