--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="main-top-page">
                 <div class="left-side">
                     <h1 class="title">This website is awesome</h1>
-                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                    <p class="description">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                     <button>Sign up</button>
                 </div>
                 <div class="right-side">
