Create main section in HTML and style container-small

--- a/index.html
+++ b/index.html
@@ -29,5 +29,28 @@
             </div>
         </div>
     </div>
+    <div class="main">
+        <div class="container-small">
+            <h2 class="main-title">Some random information</h2>
+            <ul class="main-list">
+                <li>
+                    <div class="list-image"></div>
+                    <p class="list-description">this is some subtext under an illustration or image</p>
+                </li>
+                <li>
+                    <div class="list-image"></div>
+                    <p class="list-description">this is some subtext under an illustration or image</p>
+                </li>
+                <li>
+                    <div class="list-image"></div>
+                    <p class="list-description">this is some subtext under an illustration or image</p>
+                </li>
+                <li>
+                    <div class="list-image"></div>
+                    <p class="list-description">this is some subtext under an illustration or image</p>
+                </li>
+            </ul>
+        </div>
+    </div>
   </body>
 </html>
