Style main section

--- a/index.html
+++ b/index.html
@@ -8,49 +8,62 @@
   </head>
   <body>
     <div class="top-page-background">
-        <div class="container">
-            <header class="header">
-                <a href="#" class="header-logo">Header Logo</a>
-                <ul class="navigation">
-                    <li>header link one</li>
-                    <li>header link two</li>
-                    <li>header link three</li>
-                </ul>
-            </header>
-            <div class="main-top-page">
-                <div class="left-side">
-                    <h1 class="title">This website is awesome</h1>
-                    <p class="description">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                    <button>Sign up</button>
-                </div>
-                <div class="right-side">
-                    <div class="image-placeholder">this is a placeholder for an image</div>
-                </div>
+      <div class="container">
+        <header class="header">
+          <a href="#" class="header-logo">Header Logo</a>
+          <ul class="navigation">
+            <li>header link one</li>
+            <li>header link two</li>
+            <li>header link three</li>
+          </ul>
+        </header>
+        <div class="main-top-page">
+          <div class="left-side">
+            <h1 class="title">This website is awesome</h1>
+            <p class="description">
+              This website has some subtext that goes here under the main title.
+              It's a smaller font and the color is lower contrast
+            </p>
+            <button>Sign up</button>
+          </div>
+          <div class="right-side">
+            <div class="image-placeholder">
+              this is a placeholder for an image
             </div>
+          </div>
         </div>
+      </div>
     </div>
     <div class="main">
-        <div class="container-small">
-            <h2 class="main-title">Some random information</h2>
-            <ul class="main-list">
-                <li>
-                    <div class="list-image"></div>
-                    <p class="list-description">this is some subtext under an illustration or image</p>
-                </li>
-                <li>
-                    <div class="list-image"></div>
-                    <p class="list-description">this is some subtext under an illustration or image</p>
-                </li>
-                <li>
-                    <div class="list-image"></div>
-                    <p class="list-description">this is some subtext under an illustration or image</p>
-                </li>
-                <li>
-                    <div class="list-image"></div>
-                    <p class="list-description">this is some subtext under an illustration or image</p>
-                </li>
-            </ul>
-        </div>
+      <div class="container-small">
+        <h2 class="main-title">Some random information</h2>
+        <ul class="main-list">
+          <li class="list-item">
+            <div class="list-image"></div>
+            <p class="list-description">
+              this is some subtext under an illustration or image
+            </p>
+          </li>
+          <li class="list-item">
+            <div class="list-image"></div>
+            <p class="list-description">
+              this is some subtext under an illustration or image
+            </p>
+          </li>
+          <li class="list-item">
+            <div class="list-image"></div>
+            <p class="list-description">
+              this is some subtext under an illustration or image
+            </p>
+          </li>
+          <li class="list-item">
+            <div class="list-image"></div>
+            <p class="list-description">
+              this is some subtext under an illustration or image
+            </p>
+          </li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
