--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <header class="header">
           <a href="#" class="header-logo">Header Logo</a>
           <ul class="navigation">
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
           </ul>
         </header>
         <div class="main-top-page">
