--- a/index.html
+++ b/index.html
@@ -65,5 +65,15 @@
         </ul>
       </div>
     </div>
+    <div class="bottom-main-background">
+        <div class="container-small">
+            <div class="quotation-section">
+                <p class="quotation">
+                    This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+                </p>
+                <p class="quotation-author">-Thor, God of Thunder</p>
+            </div>
+        </div>
+    </div>
   </body>
 </html>
