--- a/index.html
+++ b/index.html
@@ -75,5 +75,16 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="registration-background">
+            <div class="registration-left">
+                <h2 class="registration-title">Call to action! It's time!</h2>
+                <p class="registration-description">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="registration-right">
+                <button class="registration-button">Sigh up</button>
+            </div>
+        </div>
+    </div>
   </body>
 </html>
