--- a/index.html
+++ b/index.html
@@ -66,25 +66,32 @@
       </div>
     </div>
     <div class="bottom-main-background">
-        <div class="container-small">
-            <div class="quotation-section">
-                <p class="quotation">
-                    This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
-                </p>
-                <p class="quotation-author">-Thor, God of Thunder</p>
-            </div>
+      <div class="container-small">
+        <div class="quotation-section">
+          <p class="quotation">
+            This is an inspiring quote, or a testimonial from a customer. Maybe
+            it's just filling up space, or maybe people will actually read it.
+            Who knows? All I know is that it looks nice.
+          </p>
+          <p class="quotation-author">-Thor, God of Thunder</p>
         </div>
+      </div>
     </div>
     <div class="container">
-        <div class="registration-background">
-            <div class="registration-left">
-                <h2 class="registration-title">Call to action! It's time!</h2>
-                <p class="registration-description">Sign up for our product by clicking that button right over there!</p>
-            </div>
-            <div class="registration-right">
-                <button class="registration-button">Sigh up</button>
-            </div>
+      <div class="registration-background">
+        <div class="registration-left">
+          <h2 class="registration-title">Call to action! It's time!</h2>
+          <p class="registration-description">
+            Sign up for our product by clicking that button right over there!
+          </p>
         </div>
+        <div class="registration-right">
+          <button class="registration-button">Sigh up</button>
+        </div>
+      </div>
     </div>
+    <footer class="footer">
+        Copyright © The Odin Project 2021
+    </footer>
   </body>
 </html>
