--- a/index.html
+++ b/index.html
@@ -77,18 +77,20 @@
         </div>
       </div>
     </div>
-    <div class="container">
-      <div class="registration-background">
-        <div class="registration-left">
-          <h2 class="registration-title">Call to action! It's time!</h2>
-          <p class="registration-description">
-            Sign up for our product by clicking that button right over there!
-          </p>
+    <div>
+        <div class="container">
+          <div class="registration-background">
+            <div class="registration-left">
+              <h2 class="registration-title">Call to action! It's time!</h2>
+              <p class="registration-description">
+                Sign up for our product by clicking that button right over there!
+              </p>
+            </div>
+            <div class="registration-right">
+              <button class="registration-button">Sigh up</button>
+            </div>
+          </div>
         </div>
-        <div class="registration-right">
-          <button class="registration-button">Sigh up</button>
-        </div>
-      </div>
     </div>
     <footer class="footer">
         Copyright © The Odin Project 2021
